⚗️ update libs version